--- a/h1.html
+++ b/h1.html
@@ -22,6 +22,9 @@
 <script type="text/javascript">
 	$('<iframe />', { id: 'myFrame', src: 'https://dl.dropboxusercontent.com/u/20182278/crossDomain_postMessage_test/h2.html' }).appendTo('body');
 	// Get reference to the iframe element
+	
+	// Added comment for testing...
+	
 	var iframe = $('#myFrame').get(0);
 	// Send message with {some: "data"} data
 	
