--- a/h1.html
+++ b/h1.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+Hi this is a new change...
 <div id="displayMsg">||     ||</div>
 <input type="text" id="msg" value="Enter message"></input>
 <input type="button" id="sendMessge" value="Send Messge"></input>
